src/snapshots/rmcp_openapi__error__tests__error_response_serialization.snap
---
source: src/error.rs
expression: serialized
---
{
  "error": {
    "message": "Unknown parameter 'test_param'. Did you mean 'testParam'?",
    "parameter": "test_param",
    "suggestions": [
      "testParam"
    ],
    "type": "invalid-parameter",
    "valid_parameters": [
      "testParam",
      "otherParam"
    ]
  }
}
