src/snapshots/rmcp_openapi__error__tests__tool_call_error_http_request.snap
---
source: src/error.rs
expression: serialized
---
{
  "message": "HTTP request failed: Connection timeout"
}
