src/snapshots/rmcp_openapi__error__tests__tool_call_error_invalid_location.snap
---
source: src/error.rs
expression: serialized
---
{
  "message": "Invalid parameter location: body"
}
