src/snapshots/rmcp_openapi__error__tests__tool_call_error_json.snap
---
source: src/error.rs
expression: serialized
---
{
  "message": "Invalid JSON",
  "type": "json-error"
}
