src/snapshots/rmcp_openapi__error__tests__tool_call_error_multiple_suggestions.snap
---
source: src/error.rs
expression: serialized
---
{
  "message": "Unknown parameter 'pet_i'. Did you mean one of these? petId, petInfo",
  "parameter": "pet_i",
  "suggestions": [
    "petId",
    "petInfo"
  ],
  "type": "invalid-parameter",
  "valid_parameters": [
    "petId",
    "petInfo",
    "timeout"
  ]
}
