src/snapshots/rmcp_openapi__error__tests__tool_call_error_no_suggestions.snap
---
source: src/error.rs
expression: serialized
---
{
  "parameter": "completely_wrong",
  "suggestions": [],
  "type": "invalid-parameter",
  "valid_parameters": [
    "petId",
    "timeout"
  ]
}
