src/snapshots/rmcp_openapi__error__tests__tool_call_error_serialization_with_details.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "parameter": "pet_id",
      "suggestions": [
        "petId"
      ],
      "type": "invalid-parameter",
      "valid_parameters": [
        "petId",
        "timeout_seconds"
      ]
    }
  ]
}
