src/snapshots/rmcp_openapi__error__tests__tool_call_error_serialization_with_suggestions.snap
---
source: src/error.rs
expression: serialized
---
{
  "suggestions": [
    "getPetById",
    "getPetsByStatus"
  ],
  "tool_name": "getPetByID",
  "type": "tool-not-found"
}
