src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation.snap
---
source: src/error.rs
expression: serialized
---
{
  "type": "validation-errors",
  "violations": [
    {
      "message": "Missing required field",
      "parameter": "",
      "type": "constraint-violation"
    }
  ]
}
