src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_const.snap
---
source: src/error.rs
expression: serialized
---
{
  "actual_value": "staging",
  "constraints": {
    "const_value": "production"
  },
  "expected_type": "string",
  "field_path": "environment",
  "message": "\"staging\" is not equal to const \"production\"",
  "type": "validation-error"
}
