src/snapshots/rmcp_openapi__error__tests__tool_call_error_validation_detailed.snap
---
source: src/error.rs
expression: serialized
---
{
  "actual_value": 200,
  "constraints": {
    "maximum": 150.0,
    "minimum": 0.0
  },
  "expected_type": "integer",
  "field_path": "age",
  "message": "Parameter 'age' must be between 0 and 150",
  "type": "validation-error"
}
